added images and fonts

--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,4 +1,15 @@
 @import "_mixins/font-face"
 
-// +font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
-// +font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
++font-face("opensans", "../fonts/OpenSans-Regular/OpenSans-Regular")
++font-face("opensans", "../fonts/OpenSans-Bold/OpenSans-Bold", bold)
++font-face("opensans", "../fonts/OpenSans-BoldItalic/OpenSans-BoldItalic", bold , italic)
++font-face("opensans", "../fonts/OpenSans-ExtraBold/OpenSans-ExtraBold", 800)
++font-face("opensans", "../fonts/OpenSans-ExtraBoldItalic/OpenSans-ExtraBoldItalic", 800, italic)
++font-face("opensans", "../fonts/OpenSans-Italic/OpenSans-Italic", normal, italic)
++font-face("opensans", "../fonts/OpenSans-Light/OpenSans-Light", 200)
++font-face("opensans", "../fonts/OpenSans-LightItalic/OpenSans-LightItalic", 200, italic)
++font-face("opensans", "../fonts/OpenSans-SemiBold/OpenSans-SemiBold", 600)
++font-face("opensans", "../fonts/OpenSans-SemiboldItalic/OpenSans-SemiboldItalic", 600, italic)
++font-face("opensanscond", "../fonts/OpenSansCondensed-Bold/OpenSansCondensed-Bold", bold)
++font-face("opensanscond", "../fonts/OpenSansCondensed-Light/OpenSansCondensed-Light", 200)
++font-face("opensanscond", "../fonts/OpenSansCondensed-LightItalic/OpenSansCondensed-LightItalic", 200, italic)
