made the site header and the first section

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -5,16 +5,28 @@
 
 // ≥1200px
 +media-breakpoint-down(lg)
+  .main-menu
+    right: 60px
+    ul li
+      padding: 0 3px
 
 // ≥992px
 +media-breakpoint-down(md)
+  .main-menu
+    display: none
+  .mobile-menu-button
+    display: block
+  
+  .header-line
+    line-height: 60px
 
 // ≥768px
 +media-breakpoint-down(sm)
 
 // ≥576px
 +media-breakpoint-down(xs)
-
+  .top-line
+    display: none
 
 /*==========  Mobile First  ==========*/
 
