--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -10,6 +10,9 @@
     ul li
       padding: 0 3px
 
+  .all-classes ul li div a
+        padding-left: 5px
+
 // ≥992px
 +media-breakpoint-down(md)
   .main-menu
@@ -20,13 +23,32 @@
   .header-line
     line-height: 60px
 
+  .second-section
+	  h2
+		  margin: 25px 0 6px
+
+  .all-classes ul li div a
+      padding-left: 30px
+
+
+
 // ≥768px
 +media-breakpoint-down(sm)
+  .our-trainers
+    .soc-trainers
+      right: 15px
+    .like-trainers
+      left: 15px
 
 // ≥576px
 +media-breakpoint-down(xs)
   .top-line
     display: none
+
+  .all-classes ul li div a
+    padding-left: 5px 
+
+
 
 /*==========  Mobile First  ==========*/
 
