fourth-section done

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -20,6 +20,18 @@
   .from-the-blog
     padding: 10px 14px 0px 
   
+  .partner
+    img
+      // margin: 30px 0px 18px
+      margin-right: 0
+      margin-left: 50px
+    >div:nth-child(even)
+      img
+        margin-left: 30px
+
+
+      
+  
 
 // ≥992px
 +media-breakpoint-down(md)
@@ -46,6 +58,13 @@
 
 // ≥768px
 +media-breakpoint-down(sm)
+
+  .partner
+    img
+      margin: 30px 5px 18px
+    >div:nth-child(even)
+      img
+        margin-left: 0px
 
 
 // ≥576px
