--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -49,7 +49,7 @@ i, a
 
 
 
-.top-line
+.soc-line
 	background-color: $accent2
 	line-height: 40px
 	position: relative
@@ -300,6 +300,7 @@ i, a
 		color: #606060
 		line-height: 1.2
 		margin-top: 10px
+		margin-bottom: 13px
 	.soc-trainers
 		display: inline-block
 		position: absolute
@@ -374,7 +375,7 @@ i, a
 		font-size: 18px
 		color: #292929
 		text-transform: uppercase
-		margin-bottom: 5px
+		margin-bottom: 3px
 		font-weight: 400
 	p
 		font-size: 12px
@@ -388,16 +389,19 @@ i, a
 		text-transform: uppercase
 		border: 1px solid #3f4c51
 		padding: 1.5px 19px
+		text-decoration: none
+		&:hover
+			color: black
 
 
 
 .from-the-blog
 	background-color: #d4d6d6
-	padding: 13px 20px 0px 
+	padding: 12px 20px 4px 
 	img
 		float: left
 		vertical-align: top
-		margin-bottom: 9px
+		margin-bottom: 8px
 		margin-right: 14px
 	p
 		font-size: 13px
@@ -457,11 +461,168 @@ i, a
 
 .fifth-section
 	margin-top: 115px
-	.map img
+	.map
 		width: 100%
+		background: url('../img/maps.png')
+		background-position: center center
+		background-size: cover
+
+	.opening-hourse
+		opacity: .9
+		text-align: center
+		background-color: $accent
+		padding: 15px 21px 23px 29px
+		h3
+			font-family: opensanscond, serif
+			font-size: 30px
+			font-weight: 200
+			margin: 0
+			span
+				font-family: opensans, serif
+				font-weight: 600
+				font-size: 30px
+		ul 
+			padding: 0
+			margin: 0
+			list-style-type: none
+			text-align: left
+			position: relative
+			li
+				font-weight: 600
+				font-size: 14px
+				border-bottom: 1px dotted #fff
+				padding: 11px 2px 6px
+				&:before
+					content: '\f133'
+					font-family: fontawesome
+					font-weight: normal
+					padding-right: 12px
+				span
+					font-size: 14px
+					position: absolute
+					font-style: normal
+					right: 0
+
+		p
+			font-size: 16px
+			line-height: 1.3
+			margin: 27px 0 3px
+		span
+			font-style: italic
+			font-size: 30px
+			text-align: center
+
+.sixth-section
+	margin: 118px 0 107px
+	p
+		font-size: 14px
+		color: $accent2
+		margin: 0 25px
+		span
+			color: #0056a4
+	i
+		color: $accent
+		font-size: 70px
+		vertical-align: middle
+		margin-right: 25px
 
 
 
+.footer
+	background-color: $accent
+	padding: 47px 0
+	.signup
+		text-transform: uppercase
+		h4
+			font-size: 18px
+			font-weight: normal
+			margin-bottom: 16px
+		p
+			font-weight: 600
+			font-size: 14px
+			line-height: 1.3
+			margin-bottom: 14px
+		form
+			input[type=text]
+				text-transform: uppercase
+				color: #00afec
+				font-size: 12px
+				background-color: #b9e8fa
+				border: 1px solid #b9e8fa
+				padding: 8px 23px 7px
+				width: 337px
+				display: block
+				margin-bottom: 18px
+				&::-moz-input-placeholder
+					color: #00afec
+				&::-webkit-input-placeholder
+					color: #00afec
+				&::-ms-input-placeholder
+					color: #00afec
+			.btn
+				font-size: 12px
+				background-color: #e25050
+				outline: none
+				border: none
+				text-transform: uppercase
+				color: #fff
+				text-align: left
+				padding: 6px 22px 5px
+				&:after
+					content: '\f105'
+					font-family: fontawesome
+					font-size: 15px
+					padding-left: 81px
 
+	.info
+		text-align: center
+		img
+			margin-bottom: 19px
+		p
+			margin: 0 0 23px 0
+			line-height: 1.8
+			font-size: 13px
+			text-align-last: left
+		div 
+			display: flex
+			align-items: center
+			font-size: 20px
+			font-weight: 600
+			font-style: italic
+			span
+				font-size: 13px
+				margin-right: 20px
+
+	.footer-menu , .community
+		display: flex
+		flex-direction: column
+		align-items: center
+		h4
+			text-transform: uppercase
+			font-size: 18px
+			font-weight: normal
+			margin-bottom: 15px
+		ul
+			list-style-type: none
+			padding: 0
+			margin: 0
+			li
+				font-size: 13px
+				&:before
+					content: "\f105"
+					font-family: fontawesome
+					font-size: 15px
+					padding-right: 10px
+				a:hover
+					color: #fff
+	.footer-menu
+		h4
+			margin-right: 30px
+
+.copyright
+	font-size: 12px
+	i
+		margin-right: 4px
+		
 
 @import "media" // Always at the end
