fix main-menu and footer

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -6,9 +6,15 @@
 // ≥1200px
 +media-breakpoint-down(lg)
   .main-menu
-    right: 60px
     ul li
       padding: 0 3px
+      a
+        padding-left: 10px
+        padding-right: 10px
+    .classes a
+        padding-left: 20px
+        padding-right: 20px
+
 
   .all-classes ul li div a
         padding-left: 5px
@@ -29,17 +35,20 @@
       img
         margin-left: 30px
 
-  .info p
-    display: none
+
       
   .footer .signup form
     input[type=text] 
-      width: 200px
+      width: 230px
     .btn
-      padding-left: 15px
-      padding-right: 15px
+      // padding-left: 15px
+      // padding-right: 15px
       &:after
-        padding-left: 9px
+        padding-left: 40px
+
+  .footer
+    .info
+      text-align: left
   
 
 // ≥992px
@@ -69,13 +78,16 @@
     margin: 50px 0 
 
 
+  .footer .signup form
+    input[type=text] 
+      width: 190px
+
   .footer
     padding: 30px 0
     .info
       img
         margin-bottom: 20px
       div
-        justify-content: center
         font-size: 14px
 
 
@@ -89,17 +101,30 @@
       img
         margin-left: 0px
 
+  .footer
+    .info p 
+      margin: 7px 0 3px
+
   .signup
     h4
       display: none
 
+  .footer-menu, .community
+    h4
+      margin: 15px 0 7px !important
+  .footer-menu h4
+    margin-top: -33px !important
 
       
 
 // ≥576px
 +media-breakpoint-down(xs)
   .soc-line
-    display: none
+    text-align: center
+    .soc
+      text-align: center
+      li
+        padding-right: 5px
 
   .all-classes ul li div a
     padding-left: 5px 
@@ -111,11 +136,29 @@
   .next-event-item
     padding: 13px 5px 9px 5px
 
+  .footer
+    text-align: center
+    .info
+      p
+        display: none
+
+    
   .footer-menu, .community
     h4
       margin: 15px 0 7px !important
-    ul
-      display: none
+
+  .footer 
+    .signup form
+      input[type=text] 
+        margin-bottom: 10px
+      .btn:after
+        padding-left: 60px
+    .info 
+      margin: 35px 0 25px
+      text-align: center
+      div
+        justify-content: center
+
 
 
 
